test/Fail/UnknownWarning.agda
-- Andreas, 2024-04-13, issue #7219

{-# OPTIONS -W ThisWarningIsYetUnknown #-}

-- Should succeed with -W error.
--
-- warning: -W[no]WarningProblem
-- Unknown warning flag: ThisWarningIsYetUnknown. See --help=warning.
